--- a/examples/docking/dsb.yml
+++ b/examples/docking/dsb.yml
@@ -27,7 +27,7 @@ wic:
   steps:
     (2, stability.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+        inlineable: True # Due to yml wic tag inlineing issue and ~ inputs
         environment:
           action: checkpoint
         steps:
@@ -67,7 +67,7 @@ wic:
         crd_path: '*ligand_GMX.gro'
         top_zip_path: '*ligand_GMX.zip'
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+        inlineable: True # Due to yml wic tag inlineing issue and ~ inputs
         environment:
           action: restore
           save_defs: ['genion_complex.zip', 'prod_complex.gro']
