--- a/examples/docking/docking_stability.yml
+++ b/examples/docking/docking_stability.yml
@@ -1,21 +1,40 @@
+inputs:
+  sdf_path:
+    type: File
+    format:
+    - edam:format_3814
+  crd_path:
+    type: File
+    format:
+    - edam:format_1476
+    - edam:format_2033
+  top_zip_path:
+    type: File
+    format:
+    - edam:format_3987
+
 steps:
 - docking.yml:
+    in:
+      sdf_path: ~sdf_path
 - stability.yml:
     in:
       nsteps: 100000
       dt: 0.002
       temperature: 298.0
       pressure: 1.0
+      crd_path: ~crd_path
+      top_zip_path: ~top_zip_path
 wic:
   graphviz:
     label: Docking + MD Stability Analysis
   steps:
     (1, docking.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~sdf_path
+        inlineable: True # Due to yml wic tag inlineing issue and ~sdf_path
     (2, stability.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+        inlineable: True # Due to yml wic tag inlineing issue and ~ inputs
         steps:
           (2, basic.yml):
             wic:
