--- a/examples/docking/vs_demo_2.yml
+++ b/examples/docking/vs_demo_2.yml
@@ -93,18 +93,18 @@ wic:
   steps:
     (1, download_pdb.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (2, setup_pdb.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~pdb_id
+        inlineable: True # Due to yml wic tag inlineing issue and ~pdb_id
         graphviz:
           label: Setup PDB
     (3, download_smiles_ligand_db.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (4, assign_partial_charges.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (5, autodock_vina_batch):
       wic:
         graphviz:
@@ -123,10 +123,10 @@ wic:
           label: Apply Docking\nScore Cutoff
     (9, gen_topol_params.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (10, stability.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+        inlineable: True # Due to yml wic tag inlineing issue and ~ inputs
         steps:
           (1, setup.yml):
             wic:
@@ -160,7 +160,7 @@ wic:
                     backend: complex
     (11, autodock_vina_rescore.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (12, scatter_plot):
       wic:
         graphviz:
