--- a/examples/docking/vs_demo_3.yml
+++ b/examples/docking/vs_demo_3.yml
@@ -78,19 +78,19 @@ wic:
   steps:
     (1, download_pdb.yml):
       wic:
-        inlineable: False
+        inlineable: True
 
     (2, setup_pdb.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~pdb_id
+        inlineable: True # Due to yml wic tag inlineing issue and ~pdb_id
         graphviz:
           label: Setup PDB
     (3, download_smiles_ligand_db.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (4, ligand_modeling_docking.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~sdf_path
+        inlineable: True # Due to yml wic tag inlineing issue and ~sdf_path
     (5, duplicate):
       wic:
         graphviz:
@@ -101,10 +101,10 @@ wic:
           label: Apply Docking\nScore Cutoff
     (7, gen_topol_params.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (8, stability.yml):
       wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+        inlineable: True # Due to yml wic tag inlineing issue and ~ inputs
         steps:
           (1, setup.yml):
             wic:
@@ -138,7 +138,7 @@ wic:
                     backend: complex
     (9, autodock_vina_rescore.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (10, scatter_plot):
       wic:
         graphviz:
